--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     >
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated"
+                <a href="#" class="btn btn--white btn-animated"
                     >Discover our tours</a
                 >
             </div>
