--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="./css/icon-font.css" />
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
@@ -98,6 +99,66 @@
                                     composition__photo composition__photo--p3
                                 "
                             />
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-features u-margin-neg-top-large">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="icon-basic-world feature-box__icon"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                EXPLORE THE WORLD
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor, sit amet consectetur
+                                adipisicing elit. Maiores repellat placeat,
+                                earum iste laudantium commodi.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="icon-basic-compass feature-box__icon"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                MEET NATURE
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor, sit amet consectetur
+                                adipisicing elit. Maiores repellat placeat,
+                                earum iste laudantium commodi.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="icon-basic-map feature-box__icon"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                FIND YOUR WAY
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor, sit amet consectetur
+                                adipisicing elit. Maiores repellat placeat,
+                                earum iste laudantium commodi.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="icon-basic-heart feature-box__icon"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                LIVE A HEALTHIER LIFE
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor, sit amet consectetur
+                                adipisicing elit. Maiores repellat placeat,
+                                earum iste laudantium commodi.
+                            </p>
                         </div>
                     </div>
                 </div>
