--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </section>
 
             <section class="section-tours">
-                <div class="u-center-text u-margin-bottom-big">
+                <div class="u-center-text u-margin-bottom-small">
                     <h2 class="heading-secondary">Most Popular tours</h2>
                 </div>
 
@@ -327,6 +327,166 @@
 
                 <div class="u-center-text u-margin-top-big">
                     <a href="#" class="btn btn--green">Discover all tours</a>
+                </div>
+            </section>
+            <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="./images/video.mp4" type="video/mp4" />
+                        <source src="./images/video.webm" type="video/webm" />
+                        Your browser is not supported !
+                    </video>
+                </div>
+
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img
+                                src="./images/nat-8.jpg"
+                                alt="Peron on a tour"
+                                class="story__image"
+                            />
+                            <figcaption class="story__caption">
+                                Mary Smith
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                I HAD THE BEST WEEK EVER WITH MY FAMILY
+                            </h3>
+                            <p class="paragraph">
+                                Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Quod aliquam exercitationem
+                                ratione est a sint explicabo maxime magnam,
+                                cupiditate vitae cumque architecto qui nemo
+                                placeat quasi aperiam aut? Voluptatum, illum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img
+                                src="./images/nat-9.jpg"
+                                alt="Peron on a tour"
+                                class="story__image"
+                            />
+                            <figcaption class="story__caption">
+                                Jack Wilson
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                This has been the best experience of my lifetime
+                                !
+                            </h3>
+                            <p class="paragraph">
+                                Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Quod aliquam exercitationem
+                                ratione est a sint explicabo maxime magnam,
+                                cupiditate vitae cumque architecto qui nemo
+                                placeat quasi aperiam aut? Voluptatum, illum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-big">
+                    <a href="#" class="btn-text">Read All Stories &rarr;</a>
+                </div>
+            </section>
+
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Start booking now
+                                    </h2>
+                                </div>
+
+                                <div class="form__group">
+                                    <input
+                                        type="text"
+                                        class="form__input"
+                                        autocomplete="off"
+                                        placeholder="Full name"
+                                        id="name"
+                                        required
+                                    />
+                                    <label for="name" class="form__label"
+                                        >Full name</label
+                                    >
+                                </div>
+
+                                <div class="form__group">
+                                    <input
+                                        type="email"
+                                        class="form__input"
+                                        autocomplete="off"
+                                        placeholder="Email address"
+                                        id="email"
+                                        required
+                                    />
+                                    <label for="email" class="form__label"
+                                        >Email address</label
+                                    >
+                                </div>
+
+                                <div class="form__group">
+                                    <div class="form__radio-group">
+                                        <input
+                                            type="radio"
+                                            name="size"
+                                            class="form__radio-input"
+                                            id="small"
+                                        />
+                                        <label
+                                            for="small"
+                                            class="form__radio-label"
+                                            ><span
+                                                class="form__radio-button"
+                                            ></span
+                                            >Small tour group</label
+                                        >
+                                    </div>
+
+                                    <div class="form__radio-group">
+                                        <input
+                                            type="radio"
+                                            name="size"
+                                            class="form__radio-input"
+                                            id="large"
+                                        />
+                                        <label
+                                            for="large"
+                                            class="form__radio-label"
+                                            ><span
+                                                class="form__radio-button"
+                                            ></span
+                                            >Large tour group</label
+                                        >
+                                    </div>
+                                </div>
+
+                                <div class="form-group u-margin-top-medium">
+                                    <button class="btn btn--green">
+                                        Next Step
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
