--- a/index.html
+++ b/index.html
@@ -15,6 +15,39 @@
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
+        <div class="navigation">
+            <input
+                type="checkbox"
+                id="navi-toggle"
+                class="navigation__checkbox"
+            />
+
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
+
+            <div class="navigation__background">&nbsp;</div>
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item">
+                        <a href="" class="navigation__link">About Natours</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="" class="navigation__link">Your Benefits</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="" class="navigation__link">Popular Tours</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="" class="navigation__link">User Stories</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="" class="navigation__link">Book Now</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
         <header class="header">
             <div class="header__logo-box">
                 <img
@@ -490,5 +523,56 @@
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img
+                    src="./images/logo-green-2x.png"
+                    alt="Full logo"
+                    class="footer__logo"
+                />
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <div class="footer__navigation">
+                            <ul class="footer__list">
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link">Company</a>
+                                </li>
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link"
+                                        >Contact us</a
+                                    >
+                                </li>
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link">Careers</a>
+                                </li>
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link">Privacy</a>
+                                </li>
+                                <li class="footer__item">
+                                    <a href="#" class="footer__link">Terms</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-2">
+                        <p class="footer__copyright">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Aspernatur, nobis ullam accusantium corporis
+                            voluptas quidem perferendis harum in provident est
+                            magnam earum delectus, mollitia voluptatem
+                            consectetur autem vel, animi fugit. Lorem ipsum
+                            dolor sit amet consectetur adipisicing elit.
+                            Aspernatur, nobis ullam accusantium corporis
+                            voluptas quidem perferendis harum in provident est
+                            magnam earum delectus, mollitia voluptatem
+                            consectetur autem vel, animi fugit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
