--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                         <p class="card__price--only">Only</p>
                                         <p class="card__price--value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white"
+                                    <a href="#popup" class="btn btn--white"
                                         >Book now!</a
                                     >
                                 </div>
@@ -298,7 +298,7 @@
                                         <p class="card__price--only">Only</p>
                                         <p class="card__price--value">$497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white"
+                                    <a href="#popup" class="btn btn--white"
                                         >Book now!</a
                                     >
                                 </div>
@@ -349,7 +349,7 @@
                                         <p class="card__price--only">Only</p>
                                         <p class="card__price--value">$897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white"
+                                    <a href="#popup" class="btn btn--white"
                                         >Book now!</a
                                     >
                                 </div>
@@ -574,5 +574,44 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img
+                        src="./images/nat-8.jpg"
+                        alt="Tour Image"
+                        class="popup__image"
+                    />
+                    <img
+                        src="./images/nat-9.jpg"
+                        alt="Tour Image"
+                        class="popup__image"
+                    />
+                </div>
+                <div class="popup__right">
+                    <a href="#section-hours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">
+                        Start booking now
+                    </h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Important &ndash; Please read these terms before booking
+                    </h3>
+                    <p class="popup__text u-margin-bottom-medium">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Sapiente aspernatur eveniet, obcaecati nesciunt
+                        optio iure, porro, laudantium quos facere expedita
+                        similique numquam tempora cupiditate animi quasi quaerat
+                        praesentium nulla cumque.lore Lorem ipsum dolor, sit
+                        amet consectetur adipisicing elit. Sapiente aspernatur
+                        eveniet, obcaecati nesciunt optio iure, porro,
+                        laudantium quos facere expedita similique numquam
+                        tempora cupiditate animi quasi quaerat praesentium nulla
+                        cumque.lore
+                    </p>
+                    <a href="#" class="btn btn--green">Book Now</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
